--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -31,3 +31,21 @@
     margin-bottom: 20px;
   }
 }
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  max-width: 1064px;
+  width: 100%;
+  margin: 0 auto;
+
+  padding: 24px 20px;
+
+  & a {
+    padding: 1rem 2rem;
+    background: #202024;
+    border-radius: 5px;
+  }
+}
